fdo#64011 fix the position and the drawing from left to right in RTL sheet

this will fix the start position for drawing and you can draw shapes
from left to right when the Sheet are RTL

Change-Id: I5cc8eabf474918968bea026dba9c5add2bb4f28e